<?xml version="1.0"?>
<package>
  <name>dataset_ros</name>
  <version>0.0.0</version>
  <description>The turtlebot_velodyne package</description>

  <maintainer email="anandbala1597@gmail.com">Anand Balakrishnan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
