<package format="2">
  <name>dataset_ros</name>
  <version>0.0.0</version>
  <description>The RGBD-W Dataset package</description>

  <maintainer email="anandbal@buffalo.edu">Anand Balakrishnan</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>nodelet</depend>
  <depend>cartographer_ros</depend>
  <depend>manual_measurements</depend>

  <export>
<!--   <nodelet plugin="${prefix}/nodelets.xml"/>-->
  </export>
</package>
